Repository den devam et

--- a/NTierCalisma1.ENTITIES/NTierCalisma1.ENTITIES.csproj
+++ b/NTierCalisma1.ENTITIES/NTierCalisma1.ENTITIES.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NTierCalisma1.CORE\NTierCalisma1.CORE.csproj" />
+  </ItemGroup>
+
 </Project>
